--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bootcamp Html Workflow</title>
 </head>
 <body>
-    <h1>Hello World from Afnan</h1>
+    <h1>Hello World from Afnan Hassan</h1>
     <h1>I Seconded This...Hello World..Its Faraz</h1>
 </body>
 </html>
